but this is not that day

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,5 +19,5 @@ jobs:
           CR_PAT: ${{ secrets.PAT }}
       - name: Build Docker Image
         run: |
-          docker build ./EmailSender/Dockerfile --tag ghcr.io/tiaringhio/emailsender:latest
+          docker build . --tag ghcr.io/tiaringhio/emailsender:latest
           docker push ghcr.io/tiaringhio/emailsender:latest
